show the name of the category

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container">
+	<h5><%= @category.name %></h5>
 	<% @category.profiles.each do |profile| %>
 
       <div class="row">
