link to profile

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -12,12 +12,10 @@
               <p><%= profile.body %></p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <%= link_to "Ver Mas", profile %>
             </div>
           </div>
       </div>
 
 <% end %>
 </div>
-
-
