--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,16 @@
 <header>
 
   <nav class="blue darken-4">
-    <div class="nav-wrapper row">
+    <div class="nav-wrapper">
       <!---a href="/" class="brand-logo">Esteli Live</a--->
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-
-      <a href="<% link_to root_path %>" class="button-nav col s2"><i class="material-icons">home</i></a>
-      <a href="<% link_to root_path %>" class="button-nav col s2"><i class="material-icons">notifications</i></a>
-      <a href="<% link_to root_path %>" class="button-nav col s2"><i class="material-icons">explore</i></a>
-      <a href="<% link_to root_path %>" class="button-nav col s2"><i class="material-icons">favorite</i></a>
-      <a href="<% link_to root_path %>" class="button-nav col s2"><i class="material-icons">search</i></a>
+      <div class="row center">
+        <a href="<% link_to root_path %>" class="col s2"><i class="material-icons icon-navbar">home</i></a>
+        <a href="<% link_to root_path %>" class="col s2"><i class="material-icons icon-navbar">notifications <span class="badge1">+99</span></i></a>
+        <a href="/categories" class="col s2"><i class="material-icons icon-navbar">explore</i></a>
+        <a href="<% link_to root_path %>" class="col s2"><i class="material-icons icon-navbar">favorite</i></a>
+        <a href="<% link_to root_path %>" class="col s2"><i class="material-icons icon-navbar">search</i></a>
+      </div>
 
       <ul class="right hide-on-med-and-down">
           <%= render "/layouts/lateral_bar" %>
