--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <div class="container">
   <h5><%= @profile.name %></h5>
   <% @profile.posts.each do |post| %>
@@ -41,7 +40,9 @@
         </li>
 
      </ul>
+     <% end %>
 <% end %>
+
 </div>
 </div>
 
