--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
       <!---a href="/" class="brand-logo">Esteli Live</a--->
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <div class="row center">
-        <a href="<% link_to root_path %>" class="col s2"><i class="material-icons icon-navbar">home</i></a>
-        <a href="<% link_to root_path %>" class="col s2"><i class="material-icons icon-navbar">notifications <span class="badge1">+99</span></i></a>
-        <a href="/categories" class="col s2"><i class="material-icons icon-navbar">explore</i></a>
+        <a href="/" class="col s2"><i class="material-icons icon-navbar">home</i></a>
+        <a href="#" class="col s2"><i class="material-icons icon-navbar">notifications <span class="badge1">+99</span></i></a>
+        <a href= "/categories" class="col s2"><i class="material-icons icon-navbar">explore</i></a>
         <a href="<% link_to root_path %>" class="col s2"><i class="material-icons icon-navbar">favorite</i></a>
         <a href="<% link_to root_path %>" class="col s2"><i class="material-icons icon-navbar">search</i></a>
       </div>
