--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Guardar", class:"btn-large red" %>
+    <%= f.submit "Guardar", class:"btn-large green" %>
+    <%= link_to "Volver", panels_path, class:"btn-large red" %>
   </div>
 <% end %>
-  
