Add new route to wiki

--- a/app/views/layouts/_lateral_bar.html.erb
+++ b/app/views/layouts/_lateral_bar.html.erb
@@ -26,7 +26,7 @@
 
   <ul class="collection ">
 
-		<a href="/" class="collection-item avatar grey-text text-darken-4">
+		<a href= "<%= wikis_path %>" class="collection-item avatar grey-text text-darken-4">
 			<i class="material-icons circle green">location_city</i>
 			<span class="title">Esteli</span>
 			<p>Historia y cultura<br>
@@ -67,7 +67,7 @@
 	</a>
 
 <% else %>
-				<a href= "" class="collection-item avatar grey-text text-darken-4">
+				<a href= "<%= user_session_path %>" class="collection-item avatar grey-text text-darken-4">
 					<i class="material-icons circle red">verified_user</i>
 					<span class="title">Iniciar Seción</span>
 
