Add Wikis to project
Basic information

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -96,10 +96,10 @@
  </li>
 
 
-  <div class="actions">
-    <p>
+  <div style="margin-top: 5%;" class="row">
 
-    <%= f.submit "Actualizar Perfil", class:"btn"%>
-      </p>
+    <%= f.submit "Actualizar Perfil", class:"btn-large teal"%>
+    <p> </p>
+    <%= link_to "Cerrar Seción", destroy_user_session_path, data: { confirm: '¿Seguro que quieres salir?' }, method: :delete, class:"btn-large red" %>
 </div>
 <% end %>
