--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,25 +1,19 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <% @wikis.each do |wiki| %>
+    <ul class="collection">
 
-<h1>Listing Wikis</h1>
+      <li class="collection-item">
+        <b><%= wiki.title %></b>
+      </li>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <li class="collection-item">
+        <%= image_tag wiki.cover.url(), class:"responsive-img"%>
 
-  <tbody>
-    <% @wikis.each do |wiki| %>
-      <tr>
-        <td><%= link_to 'Show', wiki %></td>
-        <td><%= link_to 'Edit', edit_wiki_path(wiki) %></td>
-        <td><%= link_to 'Destroy', wiki, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <p class="overflow"><%= wiki.body %></p>
+        <%= link_to "Ver más", wiki %>
+        </div>
+      </li>
 
-<br>
-
-<%= link_to 'New Wiki', new_wiki_path %>
+    </ul>
+  <% end %>
+</div>
