--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Wiki</h1>
+<div class="container">
+  <h4>Nueva Wiki</h4>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', wikis_path %>
+</div>
