--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -40,13 +40,14 @@
 }
 
 .overflow {
+  height: 80px;
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
   max-width: 100%;
   /* Fallback for non-webkit */
   margin: 0 auto;
-  line-height: 1.4;
+  line-height: 1.6;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
