--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -103,3 +103,10 @@
     <%= link_to "Cerrar Seción", destroy_user_session_path, data: { confirm: '¿Seguro que quieres salir?' }, method: :delete, class:"btn-large red" %>
 </div>
 <% end %>
+
+<!-- Initialize category selector -->
+<script type="text/javascript">
+  $(document).ready(function() {
+      $('select').material_select();
+    });
+</script>
