--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Wiki</h1>
+<div class="container">
+  <b><h4>Editar Wiki: <%= @wiki.title %></h4></b>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @wiki %> |
-<%= link_to 'Back', wikis_path %>
+</div>
