--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,6 @@
       </div>
 
       <ul class="right hide-on-med-and-down">
-          <%= render "/layouts/lateral_bar" %>
 
 
       </ul>
@@ -42,4 +41,13 @@
   // Initialize collapse button
   $(".button-collapse").sideNav();
   </script>
+
+  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.5&appId=948281051916519";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 </html>
