--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,43 +1,5 @@
-<ul class="tabs">
-	<li class="tab col s6"> <a href="#tab1">Destacado</a> </li>
-	<li class="tab col s6"> <a href="#tab2">Favoritos</a> </li>
-	<li class="tab col s6"> <a href="#tab3">Reciente</a> </li>
-</ul>
-
-<div class="container">
-    <p id="notice"><%= notice %></p>
-
-
-<div id="tab1" class="col s12">
-	<!--Tarjetas-->
-	<div class="card">
-		<div class="car-content">
-			Esta es una tarjeta vacia
-			de contenido destacado
-		</div>
-	</div>
-	<!--Tarjetas-->
-</div>
-
-<div id="tab2" class="col s12">
-	<!--Tarjetas-->
-	<div class="card">
-		<div class="car-content">
-			Esta es una tarjeta vacia
-			que muestra contenido favorito
-		</div>
-	</div>
-	<!--Tarjetas-->
-</div>
-
-<div id="tab3" class="col s12">
-	<!--Tarjetas-->
-	<div class="card">
-		<div class="car-content">
-			Esta es una tarjeta vacia
-			que muestra lo mas reciente
-		</div>
-	</div>
-	<!--Tarjetas-->
-</div>
-</div>
+<% if user_signed_in? %>
+  <%= render "user_tabs" %>
+  <% else %>
+    <%= render "client_tabs" %>
+<% end %>
