--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -20,10 +20,17 @@
               <% end %>
           </div>
           <% else %>
+          <% post.pictures.each do |pic| %>
+          <div class="center">
             <%= image_tag(pic.image, class:"responsive-img")%>
+          </div>
+            <% end %>
         <% end %>
 
       </li>
+      <%= div_for(post, class: "collection-item row s12") do %>
+       <%= render partial: "hearts/button", locals: { post: post } %>
+     <% end %>
 
       <li class="collection-item row s12">
         <a class="col s4 waves-effect waves-teal btn-flat center"> <i class="material-icons">thumb_up</i></a>
