--- a/app/views/welcome/_client_tabs.html.erb
+++ b/app/views/welcome/_client_tabs.html.erb
@@ -14,6 +14,10 @@
     <%= render "/posts/form" %>
   </div>
 	<!--Tarjetas-->
+
+	<div>
+		<%= render "posts" %>
+	</div>
 </div>
 
 <div id="tab2" class="col s12">
@@ -39,3 +43,7 @@
 	<!--Tarjetas-->
 </div>
 </div>
+
+<!-- fotorama.css & fotorama.js. -->
+<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
