--- a/app/views/welcome/_user_tabs.html.erb
+++ b/app/views/welcome/_user_tabs.html.erb
@@ -14,6 +14,10 @@
     <%= render "/posts/form" %>
   </div>
 	<!--Tarjetas-->
+
+	<div>
+		<%= render "posts" %>
+	</div>
 </div>
 
 <div id="tab2" class="col s12">
