Add a confirmation to users

--- a/app/views/profiles/_post_frame.html.erb
+++ b/app/views/profiles/_post_frame.html.erb
@@ -25,7 +25,9 @@
 
     </li>
     <%= div_for(post, class: "collection-item row s12") do %>
+    <%= if user_signed_in? %>
      <%= render partial: "hearts/button", locals: { post: post } %>
+    <% end %>
    <% end %>
 
    </ul>
