--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,20 @@
-<% if user_signed_in? %>
   <%= render "user_tabs" %>
-  <% else %>
-    <%= render "client_tabs" %>
-<% end %>
+
+    </div>
+    <% if user_signed_in? %>
+  	  <div class="z-depth-1">
+        <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+          <a href="#modal1" class="modal-trigger btn-floating btn-large red">
+            <i class="large material-icons">mode_edit</i>
+        </a>
+  	  </div>
+
+      <%= render "posts/form" %>
+  	<% end %>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+  // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+  $('.modal-trigger').leanModal();
+  });
+</script>
