--- a/app/views/hearts/_button.html.erb
+++ b/app/views/hearts/_button.html.erb
@@ -1,12 +1,31 @@
+
 <% if user_signed_in? %>
     <% if current_user.heart?(post) %>
-    <%= button_to unheart_path(post_id: post.id), remote: true, method: :delete, class:"col s4 waves-effect waves-teal btn-flat center" do%>
-    <i class="material-icons">favorite</i>
+    <%= button_to unheart_path(post_id: post.id), remote: true, method: :delete, class:"col s4 btn-flat center" do%>
+    <i style="vertical-align: middle; font-size:2.5em;" class="material-icons red-text">favorite</i>
+
+    <% if post.hearts.count > 0 %>
+      <span class="blue-text"><b><%= post.hearts.count%></b></span>
+    <% end %>
+
     <% end %>
     <% else %>
-      <%= button_to heart_path(post_id: post.id), remote: true, class:"col s4 waves-effect waves-teal btn-flat center" do%>
-          <i class="material-icons">favorite_border</i>
+      <%= button_to heart_path(post_id: post.id), remote: true, class:"col s4 btn-flat center" do%>
+          <i style="vertical-align: middle; font-size:2.5em;" class="material-icons">favorite_border</i>
+
+          <% if post.hearts.count > 0 %>
+            <span class="blue-text"><b><%= post.hearts.count%></b></span>
+          <% end %>
+
       <% end %>
     <% end %>
+
+    <% else %>
+      <div class="col s4">
+        <i style="vertical-align: middle; font-size:2.5em;" class="material-icons red-text">favorite</i>
+
+        <% if post.hearts.count > 0 %>
+          <span class="blue-text"><b><%= post.hearts.count%></b></span>
+        <% end %>
+
 <% end %>
-<%= @post.hearts.count %>
