--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,17 +1,18 @@
-<div style="margin-left:5%; margin-right:5%;">
+<div id="modal1" class="modal">
+  <div class="modal-content">
   <%= form_for @post, :html => { :class => 'form-horizontal', multipart: true }, :authenticity_token => true do |f| %>
 
 
       <div class="row">
-        <div class="input-field col s12">
-          <%= f.text_area :body,class:"materialize-textarea", length:"180", input_html: { hidden: true } %>
+        <div id="input_body" class="input-field col s12">
+          <%= f.text_area :body, id:"text_area_body", class:"materialize-textarea", length:"180", input_html: { hidden: true } %>
           <label for="textarea1">Escribir publicación</label>
         </div>
       </div>
 
       <div class="file-field input-field">
-      <div class="btn">
-        <span>Imagenes</span>
+      <div class="btn-large">
+        <i class="material-icons">attach_file</i>
         <input type="file" multiple>
              <%= file_field_tag "images[]", type: :file, multiple: true, input_html: { hidden: true }%>
       </div>
@@ -20,9 +21,31 @@
       </div>
     </div>
 
-  <div class="actions">
-    <%= f.submit "Publicar", class:"btn blue" %>
+  <div class="row right">
+    <%= button_tag(type: 'submit', id:"btn-post", class: "btn blue") do %>
+     <i class="material-icons">check_circle</i>
+    <% end %>
+
+    <a href="#!" class=" modal-action modal-close btn red"><i class="material-icons">cancel</i></a>
+
   </div>
 
 <% end %>
 </div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('#btn-post').attr('disabled',true);
+
+    $('#text_area_body').keyup(function(){
+        if($(this).val().length !=0){
+            $('#btn-post').attr('disabled', false);
+        }
+        else
+        {
+            $('#btn-post').attr('disabled', true);
+        }
+    })
+  });
+</script>
