--- a/app/views/profiles/_profile_info.html.erb
+++ b/app/views/profiles/_profile_info.html.erb
@@ -1,8 +1,8 @@
 <div style="margin-top:3%;margin-bottom: 0px;" class="row">
 
   <div class="col s4 m2">
-    <img style="margin-left:2%; max-width:100px;"
-    src="<%= @profile.avatar.url %>" alt="" class="circle responsive-img">
+    <img style="margin-left:1%; max-width:100px;"
+    src="<%= @profile.avatar.url(:mini) %>" alt="" class="circle responsive-img">
     <!-- Dropdown Trigger -->
     <a  class='dropdown-button btn green' href='#' data-activates='dropdown1'>Seguir</a>
 
@@ -14,7 +14,7 @@
 
   </div>
 
-  <div class="col s8 m4">
+  <div style="padding-left:5%;" class="col s8 m6">
     <b><%= @profile.name %></b>
     <br>
     <%= @profile.body %>
