--- a/app/views/welcome/_posts.html.erb
+++ b/app/views/welcome/_posts.html.erb
@@ -1,12 +1,25 @@
-<% @posts.each do |post| %>
+<% @posts.order(created_at: :desc).each do |post| %>
   <ul class="collection z-depth-2">
     <li class="collection-item row">
-      <img style="vertical-align: middle; margin-left:2%; max-width:50px;" src="<%= post.profile.avatar.url %>" alt="" class="circle responsive-img">
-      <b><%= post.profile.name %></b>
+      <img style="vertical-align: middle; margin-left:2%; max-width:50px;" src="<%= post.profile.avatar.url(:mini) %>" alt="" class="circle responsive-img">
+      <b><%= link_to post.profile.name, post.profile %></b>
+
+      <% if user_signed_in? %>
+          <% if current_user.id == post.profile.user_id %>
+            <%= link_to post, method: :delete, data: { confirm: '¿Borrar tu publicación?' }, class:"right" do%>
+              <i class="material-icons">delete</i>
+            <% end %>
+
+            <%= link_to edit_post_path(post), class:"right" do%>
+              <i class="material-icons">mode_edit</i>
+            <% end %>
+          <% end %>
+      <% end %>
+
     </li>
 
     <li class="collection-item">
-      <p>
+      <p class="responsive-text">
         <%= post.body %>
       </p>
       <% if post.pictures.count > 1 %>
