working in partials

--- a/app/views/welcome/_user_tabs.html.erb
+++ b/app/views/welcome/_user_tabs.html.erb
@@ -14,8 +14,8 @@
 <div class="container">
 
 <div id="tab1" class="col s12">
-	<div>
-		<%= render "posts" %>
+	<div id="posts_index">
+		<%= render partial: "posts" %>
 	</div>
 </div>
 
