--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,7 +22,7 @@
     </div>
 
   <div class="row right">
-    <%= button_tag(type: 'submit', id:"btn-post", class: "btn blue") do %>
+    <%= button_tag(type: 'submit', id:"btn-post", remote: true, class: "btn blue") do %>
      <i class="material-icons">check_circle</i>
     <% end %>
 
