--- a/app/views/hearts/heart.js.erb
+++ b/app/views/hearts/heart.js.erb
@@ -1,1 +1,2 @@
 $('div#<%= dom_id(@post) %>').html('<%= j render partial: "button", locals: {post: @post} %>');
+$('div#<%= dom_id(@post) %>').html('<%= j render partial: "button_client", locals: {post: @post} %>');
