--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -5,7 +5,7 @@
       <div class="row">
           <div class="card">
             <div class="card-image">
-              <%= image_tag profile.cover.url(:card) %>
+              <%= image_tag profile.cover.url(:card) class:"circle" %>
               <span style="text-shadow: 0px 0px 6px rgba(0, 0, 0, 1);" class="card-title text_transp"><%= profile.name %></span>
             </div>
             <div class="card-content">
