--- a/app/views/welcome/_posts.html.erb
+++ b/app/views/welcome/_posts.html.erb
@@ -38,7 +38,11 @@
 
     </li>
     <%= div_for(post, class: "collection-item row center") do %>
-     <%= render partial: "hearts/button", locals: { post: post } %>
+      <% if client_signed_in? %>
+        <%= render partial: "hearts/button_client", locals: {post: post} %>
+      <% else %>
+        <%= render partial: "hearts/button", locals: { post: post } %>
+      <% end %>
    <% end %>
 
    </ul>
