--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,10 +3,14 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-  <div class="field">
-    <%= f.label "Nombre" %>
-    <%= f.text_field :name %>
-  </div>
+
+  <% if registration_path(resource_name) == client_registration_path %>
+    <div class="field">
+      <%= f.label "Nombre" %>
+      <%= f.text_field :name %>
+    </div>
+  <% end %>
+
   <div class="field">
     <%= f.label "Email" %><br />
     <%= f.email_field :email, autofocus: true %>
