--- a/app/views/layouts/_lateral_bar.html.erb
+++ b/app/views/layouts/_lateral_bar.html.erb
@@ -14,6 +14,14 @@
 				<%= image_tag "unknown_user.png", class:"circle", size:"64" %>
 			</span>
 
+<!--if client is signed in-->
+		<% elsif client_signed_in? %>
+			<%= image_tag "no_cover.jpg", class:"responsive-img" %>
+
+			<span class="profile-img">
+				<%= link_to image_tag(current_client.clientprofile.avatar, class:"circle", size:"74"), (clientprofile_path(current_client.clientprofile)) %>
+			</span>
+
 <!-- else show a default item -->
 		<% else %>
 				<%= image_tag "no_cover.jpg", class:"responsive-img" %>
@@ -66,8 +74,17 @@
 		</p>
 	</a>
 
+<% elsif client_signed_in? %>
+		<a href="<%= edit_clientprofile_path(current_client.clientprofile) %>" class="collection-item avatar grey-text text-darken-4">
+			<i class="material-icons circle cyan">face</i>
+			<span class="title"> <b>Configuración</b> </span>
+			<p>Administrar<br>
+				Perfil
+			</p>
+		</a>
+
 <% else %>
-				<a href= "<%= user_session_path %>" class="collection-item avatar grey-text text-darken-4">
+				<a href= "<%= client_session_path %>" class="collection-item avatar grey-text text-darken-4">
 					<i class="material-icons circle red">verified_user</i>
 					<span class="title"><b>Iniciar Seción</b></span>
 
