Update views for clients profiles

--- a/app/views/clientprofiles/edit.html.erb
+++ b/app/views/clientprofiles/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Clients Profile</h1>
-
-<%= render 'form' %>
+<h4>Editar Perfil</h4>
+<div class="container">
+  <%= render 'form' %>
+</div>
 
 <%= link_to 'Show', @clientprofile %> |
 <%= link_to 'Back', clientprofiles_path %>
