--- a/app/views/clientprofiles/show.html.erb
+++ b/app/views/clientprofiles/show.html.erb
@@ -1,11 +1,62 @@
 <div class="container">
   <div class="card-panel">
 
-    <%= image_tag @clientprofile.avatar(:mini), class:"circle", style:"max-width:200px;" %>
+          <% if client_signed_in? %>
+              <%= link_to "#modalpic", class:"modal-trigger btn-floating blue", style:"position:absolute" do%>
+                <i class="material-icons">mode_edit</i>
+              <% end %>
+          <% end %>
+
+  <div class="row card-content">
+    <div class="col s5">
+
+          <%= image_tag @clientprofile.avatar(:mini), class:"responsive-img materialboxed circle"%>
+
+    </div>
+
+    <div class="col s6">
+      <b><%= @clientprofile.name %></b>
+      <table class="centered">
+        <thead>
+          <tr>
+            <th>Likes</th>
+            <th>Seguidos</th>
+            <th>Karma</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>
+              <%= @clientprofile.client.hearts.count %>
+            </td>
+            <td>
+              0
+            </td>
+            <td>
+              0
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+
+</div>
+
+<div>
+  <b>Ubicación: </b><%= @clientprofile.city %>
+</div>
+<div>
+  <p><b>Bigrafía: </b><%= @clientprofile.biography %>
+  </p>
+</div>
   </div>
 
-  <%= link_to "Cerrar Seción", destroy_client_session_path, data: { confirm: '¿Seguro que quieres salir?' }, method: :delete, class:"btn-large red" %>
-
+    <% if client_signed_in? %>
+        <%= link_to "Editar tu Perfil", edit_clientprofile_path, class:"btn grey"%>
+    <% end %>
+    
 </div>
 
 <div class="row">
@@ -14,3 +65,48 @@
 
 
 </div>
+
+<% if client_signed_in? %>
+<!-- Modal upload pic -->
+<div id="modalpic" class="modal">
+  <div class="modal-content">
+    <b>Cambiar foto de perfil</b>
+    <%= image_tag @clientprofile.avatar(:mini), id:"image", class:"responsive-img circle", style:"max-width:120px;"%>
+    <span>Vista previa</span>
+      <%= form_for(current_client.clientprofile) do |f| %>
+      <div class="file-field input-field">
+        <div class="btn red">
+          <span>Abrir</span>
+          <input type="file">
+          <%= f.file_field :avatar, id:"files", input_html: { hidden: true }%>
+        </div>
+        <div class="file-path-wrapper">
+          <input class="file-path validate" type="text">
+        </div>
+      </div>
+  </div>
+  <div class="modal-footer">
+    <%= button_tag("Listo",type: 'submit', id:"btn-post", class: "modal-action modal-close waves-effect waves-green btn-flat") %>
+    <% end %>
+    <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancelar</a></div>
+  </div>
+<% end %>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+  // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+  $('.modal-trigger').leanModal();
+  });
+
+  document.getElementById("files").onchange = function () {
+    var reader = new FileReader();
+
+    reader.onload = function (e) {
+        // get loaded data and render thumbnail.
+        document.getElementById("image").src = e.target.result;
+    };
+
+    // read the image file as a data URL.
+    reader.readAsDataURL(this.files[0]);
+};
+</script>
