add following options

--- a/app/views/clientprofiles/show.html.erb
+++ b/app/views/clientprofiles/show.html.erb
@@ -56,15 +56,15 @@
     <% if client_signed_in? %>
         <%= link_to "Editar tu Perfil", edit_clientprofile_path, class:"btn grey"%>
     <% end %>
-    
-</div>
 
-<div class="row">
-  <h4>Recientemente</h4>
-
-
+    <h4>Actividad</h4>
 
 </div>
+
+
+
+
+
 
 <% if client_signed_in? %>
 <!-- Modal upload pic -->
