--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -63,3 +63,9 @@
   position: absolute;
   padding-left: 1%;
 }
+
+html, body {
+    height: 100%;
+    background-size: cover;
+    background:url("/assets/login.jpg") no-repeat center center fixed;
+}
