--- a/app/views/clientprofiles/_form.html.erb
+++ b/app/views/clientprofiles/_form.html.erb
@@ -57,6 +57,10 @@
     </div>
   <% end %>
 
+  <div>
+      <%= link_to "Cerrar Seción", destroy_client_session_path, method: :delete, class:"btn-large red" %>
+  </div>
+
 </div>
 
 
