--- a/app/views/profiles/_post_frame.html.erb
+++ b/app/views/profiles/_post_frame.html.erb
@@ -24,8 +24,12 @@
       <% end %>
 
     </li>
-    <%= div_for(post, class: "collection-item row s12") do %>
-     <%= render partial: "hearts/button", locals: { post: post } %>
+    <%= div_for(post, class: "collection-item row center") do %>
+      <% if client_signed_in? %>
+        <%= render partial: "hearts/button_client", locals: {post: post} %>
+      <% else %>
+        <%= render partial: "hearts/button", locals: { post: post } %>
+      <% end %>
    <% end %>
 
    </ul>
