--- a/app/views/profiles/_post_frame.html.erb
+++ b/app/views/profiles/_post_frame.html.erb
@@ -1,4 +1,4 @@
-<% @profile.posts.each do |post| %>
+<% @profile.posts.order(created_at: :desc).each do |post| %>
   <ul class="collection z-depth-2">
     <li class="collection-item row">
       <img style="vertical-align: middle; margin-left:2%; max-width:50px;" src="<%= @profile.avatar.url(:mini) %>" alt="" class="circle responsive-img">
@@ -12,7 +12,7 @@
       <% if post.pictures.count > 1 %>
         <div class="fotorama" data-nav="thumbs" data-allowfullscreen="true">
             <% post.pictures.each do |pic| %>
-              <a href="<%= pic.image.url() %>"><img src="<%= pic.image.url(:thumb)%>"></a>
+              <a href="<%= pic.image.url() %>"><img src="<%= pic.image.url(:thumb)%>" class:"responsive-img"></a>
             <% end %>
         </div>
         <% else %>
