--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -60,8 +60,8 @@
 
 /*Counter likes*/
 .like-text{
-  position: absolute;
-  padding-left: 1%;
+  position: relative;
+  padding-left: 1.5%;
 }
 
 html, body {
