--- a/app/views/hearts/_button_client.html.erb
+++ b/app/views/hearts/_button_client.html.erb
@@ -2,7 +2,7 @@
 <% if client_signed_in? %>
 
   <% if current_client.heart?(post)%>
-          <%= button_to unheart_path(post_id: post.id), remote: true, method: :delete, class:"col s2 btn-flat center" do%>
+          <%= button_to unheart_path(post_id: post.id), remote: true, method: :delete,style:"width:27%;", class:"col s2 btn-flat center" do%>
 
             <i style="vertical-align: middle; font-size:2.5em;" class="material-icons red-text">favorite</i>
 
@@ -14,7 +14,7 @@
 
           <% else %>
 
-            <%= button_to heart_path(post_id: post.id), remote: true, class:"col s2 btn-flat center" do%>
+            <%= button_to heart_path(post_id: post.id), remote: true,style:"width:27%;", class:"col s2 btn-flat center" do%>
                 <i style="vertical-align: middle; font-size:2.5em;" class="material-icons">favorite_border</i>
 
                 <% if post.hearts.count > 0 %>
