--- a/app/views/hearts/unheart.js.erb
+++ b/app/views/hearts/unheart.js.erb
@@ -1,2 +1,1 @@
-$('div#<%= dom_id(@post) %>').html('<%= j render partial: "button", locals: {post: @post} %>');
-$('div#<%= dom_id(@post) %>').html('<%= j render partial: "button_client", locals: {post: @post} %>');
+$('#<%= dom_id(@post) %>').html('<%= j render partial: "button", locals: {post: @post} %>');
