--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,11 @@
 
 <header>
 
+<div class="navbar-fixed">
   <nav class="blue darken-4">
     <div class="nav-wrapper">
       <!---a href="/" class="brand-logo">Esteli Live</a--->
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <a href="#" class="button-collapse"><i class="material-icons">menu</i></a>
       <div class="row center">
         <a href="/" class="col s2"><i class="material-icons icon-navbar">home</i></a>
         <a href="#" class="col s2"><i class="material-icons icon-navbar">notifications <span class="badge1">+99</span></i></a>
@@ -32,6 +33,8 @@
       </ul>
     </div>
   </nav>
+</div>
+
 </header>
 <body>
 
