disable lateral bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <nav class="blue darken-4">
     <div class="nav-wrapper">
       <!---a href="/" class="brand-logo">Esteli Live</a--->
-      <a href="#" class="button-collapse"><i class="material-icons">menu</i></a>
+      <a href="/menus" class="button-collapse"><i class="material-icons">menu</i></a>
       <div class="row center">
         <a href="/" class="col s2"><i class="material-icons icon-navbar">home</i></a>
         <a href="#" class="col s2"><i class="material-icons icon-navbar">notifications <span class="badge1">+99</span></i></a>
@@ -49,10 +49,6 @@
   <%= yield%>
 
 </body>
-  <script type="text/javascript">
-  // Initialize collapse button
-  $(".button-collapse").sideNav();
-  </script>
 
   <div id="fb-root"></div>
 <script>(function(d, s, id) {
